--- a/index.html
+++ b/index.html
@@ -1,11 +1,285 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=h1, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <h1>Hello World</h1>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Graphic Designer Portfolio</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <!-- Part-1 -->
+    <header>
+      <nav class="navbar">
+        <div class="logo">
+          <div class="logo-bar"></div>
+          <span class="logo-text">War War Lwin</span>
+        </div>
+        <div class="nav-links">
+          <a href="#">Home</a>
+          <a href="#">About</a>
+          <a href="#">Portfolio</a>
+        </div>
+      </nav>
+    </header>
+
+    <!-- Part-2 -->
+    <section class="hero">
+      <h1>HELLO I'M</h1>
+      <h2>GRAPHIC DESIGNER</h2>
+      <p>
+        I'm a passionate Graphic Designer dedicated to bringing ideas to life
+        through stunning visuals. With a keen eye for detail and a love for
+        aesthetics, I specialize in branding, digital design, and print media
+        that captivate and engage audiences.
+      </p>
+      <a class="btn" href="image/War War Lwin Resume.pdf" download="My-CV.pdf"
+        >Download My CV</a
+      >
+    </section>
+
+    <!-- Part-3 -->
+    <div class="personal-info1">
+      <img class="image" src="image/Girl1.png" alt="girl" />
+      <div class="content">
+        <h3>Personal Info</h3>
+        <p>
+          Graphic Designer with 8+ years of experience in design, layout, and
+          management print and digital projects from conception to completion.
+          Specialized in creating brochures, flyers, layouts, social media
+          advertisements, videos, and more using various Adobe Suite tools and
+          graphic design software.
+        </p>
+        <div class="info">
+          <div class="label1">
+            <h4>Email</h4>
+            <p>warwar.ying@gmail.com</p>
+          </div>
+          <div class="label2">
+            <h4>Phone</h4>
+            <p>06 343 770 76</p>
+          </div>
+          <div class="label3">
+            <h4>Address</h4>
+            <p>Chiangmai, Thailand</p>
+          </div>
+          <div class="label4">
+            <h4>Follow</h4>
+            <div class="social-icons">
+              <img src="image/facebook_icon.png" alt="img" />
+              <img src="image/linkin_icon.png" alt="img" />
+              <img src="image/instagram_icon.png" alt="img" />
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Part-4 -->
+    <div class="personal-info2">
+      <div class="education">
+        <h3>Education</h3>
+        <div class="fact">
+          <div class="edu-item1">
+            <p>2018-2016</p>
+          </div>
+          <div class="edu-item2">
+            <p><b>BA MYANMAR</b></p>
+            <p>University of East Yangon</p>
+          </div>
+          <div class="edu-item3">
+            <p>2019-2020</p>
+          </div>
+          <div class="edu-item4">
+            <p><b>Diploma in Chinese</b></p>
+            <p>University of Foreign Language (YUFL)</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="qualifications">
+        <h3>Other Qualifications</h3>
+        <div class="qual-item">
+          <div class="qual-item1">
+            <p>DTP</p>
+            <p>Graphic Design</p>
+            <p>Video Editing</p>
+            <p>English</p>
+            <p>Chinese</p>
+            <p>Thai</p>
+          </div>
+
+          <div class="qual-item2">
+            <p>(King Computer Training Center)</p>
+            <p>(STARK School of Visual Arts)</p>
+            <p>(STARK School of Visual Arts)</p>
+            <p>(Active English Center)</p>
+            <p>(Fuxing Confucius Classroom)</p>
+            <p>(Sun-Lingo Language School)</p>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Part-5 -->
+    <div class="key-skills">
+      <div class="skills-section">
+        <h3>Key Skills</h3>
+        <div class="skill-group">
+          <div class="skill">
+            <p>Adobe Photoshop</p>
+            <div class="progress">
+              <div class="progress-bar" style="width: 90%"></div>
+            </div>
+          </div>
+          <div class="skill">
+            <p>Adobe Indesign</p>
+            <div class="progress">
+              <div class="progress-bar" style="width: 85%"></div>
+            </div>
+          </div>
+          <div class="skill">
+            <p>Adobe Illustrator</p>
+            <div class="progress">
+              <div class="progress-bar" style="width: 80%"></div>
+            </div>
+          </div>
+          <div class="skill">
+            <p>Adobe Premiere Pro</p>
+            <div class="progress">
+              <div class="progress-bar" style="width: 70%"></div>
+            </div>
+          </div>
+          <div class="skill">
+            <p>Adobe Pagemaker</p>
+            <div class="progress">
+              <div class="progress-bar" style="width: 60%"></div>
+            </div>
+          </div>
+          <div class="skill">
+            <p>Microsoft Word/Excel</p>
+            <div class="progress">
+              <div class="progress-bar" style="width: 50%"></div>
+            </div>
+          </div>
+          <div class="skill">
+            <p>Canva</p>
+            <div class="progress">
+              <div class="progress-bar" style="width: 40%"></div>
+            </div>
+          </div>
+          <div class="skill">
+            <p>HTML/CSS</p>
+            <div class="progress">
+              <div class="progress-bar" style="width: 20%"></div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="image-section">
+        <img src="image/Girl2.png" alt="Girl2" />
+      </div>
+    </div>
+
+    <!-- Part-6 -->
+    <div class="experience">
+      <h3>Experience</h3>
+      <div class="experience-container">
+        <div class="experience-column">
+          <div class="experience-item">
+            <span class="dot"></span>
+            <div class="details">
+              <h3>Graphic & Video Editor<span>(2018-Present)</span></h3>
+              <p>Stanford Canadian International School</p>
+            </div>
+          </div>
+          <div class="experience-item">
+            <span class="dot"></span>
+            <div class="details">
+              <h3>Graphic Designer<span>(2016-2018)</span></h3>
+              <p>Youngguns Production</p>
+            </div>
+          </div>
+
+          <div class="experience-item">
+            <span class="dot"></span>
+            <div class="details">
+              <h3>Graphic Designer<span>(2014-2016)</span></h3>
+              <p>Huawei Technology Co.,Ltd</p>
+            </div>
+          </div>
+        </div>
+        <div class="experience-column">
+          <div class="experience-item">
+            <span class="dot"></span>
+            <div class="details">
+              <h3>Layout Designer<span>(2012-2014)</span></h3>
+              <p>Mizzima Co., Ltd</p>
+            </div>
+          </div>
+          <div class="experience-item">
+            <span class="dot"></span>
+            <div class="details">
+              <h3>Layout Designer <span>(2010-2012)</span></h3>
+              <p>YS Entertainment</p>
+            </div>
+          </div>
+          <div class="experience-item">
+            <span class="dot"></span>
+            <div class="details">
+              <h3>Layout Designer <span>(2008-2010)</span></h3>
+              <p>Quality Publishing House</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Part-7 -->
+    <div class="portfolio">
+      <h3>Portfolio (HTML/CSS)</h3>
+      <div class="portfolio-container">
+        <div class="item"><img src="image/project 1.jpg" alt="img" /></div>
+        <div class="item"><img src="image/project 2.jpg" alt="img" /></div>
+        <div class="item"><img src="image/project 3.jpg" alt="img" /></div>
+        <div class="item"><img src="image/project 5.jpg" alt="img" /></div>
+        <div class="item"><img src="image/project 4.jpg" alt="img" /></div>
+        <div class="item"><img src="image/project 6.jpg" alt="img" /></div>
+      </div>
+    </div>
+
+    <!-- Part-8 -->
+    <footer class="footer">
+      <div class="container">
+        <div class="footer-content">
+          <div class="logo">
+            <div class="logo-bar"></div>
+            <span class="logo-text">War War Lwin</span>
+          </div>
+          <nav class="footer-nav">
+            <ul>
+              <li><a href="#home">Home</a></li>
+              <li><a href="#about">About</a></li>
+              <li><a href="#portfolio">Portfolio</a></li>
+            </ul>
+          </nav>
+          <div class="footer-social">
+            <link
+              rel="stylesheet"
+              href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
+              integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
+              crossorigin="anonymous"
+              referrerpolicy="no-referrer"
+            />
+            <a href="https://www.facebook.com/"
+              ><i class="fab fa-facebook"></i
+            ></a>
+            <a href="#"><i class="fab fa-twitter"></i></a>
+            <a href="#"><i class="fab fa-instagram"></i></a>
+            <a href="#"><i class="fab fa-linkedin"></i></a>
+          </div>
+        </div>
+        <p class="footer-bottom">&copy; 2025 MyPortfolio.</p>
+      </div>
+    </footer>
+  </body>
 </html>
