--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Graphic Designer Portfolio</title>
     <link rel="stylesheet" href="style.css" />
+  <link rel="icon" type="image" href="image/Logo.jpg">
   </head>
   <body>
     <!-- Part-1 -->
